[package]
name = "patcher"
version = "0.4.1"
edition = "2021"

[dependencies]
windows = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
protocol = { path = "../protocol" }
pelite = "0.10"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
once_cell = "1.21.3"
